# Umemployed

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CELERY_AZURE_DEPLOYMENT.md  COMPLETE_FALLBACK_STRATEGY.md  Dockerfile  Dockerfile.celery  FRONTEND_API_DOCUMENTATION.md  GITHUB_SECRETS_SETUP.md  GOOGLE_MEET_IMPLEMENTATION.md  IMPORT_UPDATE_SUMMARY.md  Makefile  OAUTH_CALLBACK_UPDATE_SUMMARY.md  POOL_EXPLANATION.md  POSTMAN_TESTING_GUIDE.md  PROJECT_STRUCTURE.md  Procfile  QUANTUM_JOB_TEST.md  QUESTION_STRATEGY.md  QUICK_DEPLOYMENT_GUIDE.md  README.md  SECURITY_IMPROVEMENTS.md  SETUP_COMPLETE.md  TEMPLATE_MISSING_FIX.md  build-celery-worker.sh  client_secret_845709768103-93nbovr5fkujpup7t7qpbk0akulmifgp.apps.googleusercontent.com.json  credentials.json  daily_email_script.py  db.sqlite3  deploy-celery-acr.sh  deploy-celery-beat.sh  docker-compose.yml  dump.rdb  entrypoint.sh  google-meet-frontend-example.js  import_mcq.py  import_skills.py  import_skills2.py  (+19 more)
.github/: pull_request_template.md
.qodo/: history.sqlite
asseessments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
assessments/: apps.py  models.py  urls.py  views.py
backup/: backup.sh  db_backup_20240902_233811.sql  notes  restore.sh
company/: admin.py  decorators.py  forms.py  google_utils.py  models.py  urls.py  views.py
config/: nginx.conf
dashboard/: decorators.py  forms.py  urls.py  views.py
docs/: ACCOUNT_DELETION_FIX.md  CELERY_AZURE_DEPLOYMENT.md  CELERY_WORKER_SETUP.md  DOCKER_HUB_DEPLOYMENT.md  ENHANCED_JOB_CREATION_STEP4.md  POOL_EXAMPLE.md  (+20 more)
(+672 files in other folders)
